<resources>
    <string name="app_name">Films</string>
    <string name="go_to_film">Go to film</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="_film_age_13">13+</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="_125_reviews">125 REVIEWS</string>
    <string name="avengers_nend_game">Avengers: \nEnd Game</string>
    <string name="storyline">Storyline</string>
    <string name="storyline_content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_list">Movies list</string>
    <string name="_13">13+</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="_137_min">137 MIN</string>

    <string name="storyline_avengers_end_game">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="storyline_tenet">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="storyline_black_widow">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="storyline_wonder_woman_1984">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="search_movie">Search movie</string>
    <string name="ok">OK</string>
    <string name="popular_movies">Popular movies</string>
    <string name="found_films_count">Found: 54</string>
    <string name="_8_8">8.8</string>
</resources>