<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="SimpleFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_gray"
        tools:context=".MovieDetailsActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/background_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/background_picture"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/gradient_background_picture"
                app:layout_constraintBottom_toBottomOf="@+id/background_picture"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="54dp"
                android:text="@string/back"
                android:textColor="#6D6D80"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/film_age_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="54dp"
                android:text="@string/_film_age_13"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/background_picture"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/film_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/avengers_nend_game"
                android:textColor="@color/white"
                android:textSize="42sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/film_age_text" />

            <TextView
                android:id="@+id/film_genre_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/action_adventure_fantasy"
                android:textColor="#FF3466"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/film_name_text" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:numStars="5"
                android:rating="4"
                android:theme="@style/mySmallRatingBarTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/film_genre_text" />

            <TextView
                android:id="@+id/film_reviews_number_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/_125_reviews"
                android:textColor="#6D6D80"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/rating_bar"
                app:layout_constraintStart_toEndOf="@+id/rating_bar"
                app:layout_constraintTop_toTopOf="@+id/rating_bar" />

            <TextView
                android:id="@+id/storyline_head_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:text="@string/storyline"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

            <TextView
                android:id="@+id/storyline_content_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/storyline_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyline_head_text" />

            <TextView
                android:id="@+id/cast_head_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:text="@string/cast"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyline_content_text" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/artist_photo_downey_jr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/artist_photo_downey_jr"
                app:layout_constraintEnd_toStartOf="@+id/artist_photo_evans"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cast_head_text" />

            <TextView
                android:id="@+id/artist_name_downey_jr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/robert_downey_jr"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/artist_photo_downey_jr"
                app:layout_constraintStart_toStartOf="@+id/artist_photo_downey_jr"
                app:layout_constraintTop_toBottomOf="@+id/artist_photo_downey_jr" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/artist_photo_evans"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/artist_photo_evans"
                app:layout_constraintEnd_toStartOf="@+id/artist_photo_ruffalo"
                app:layout_constraintStart_toEndOf="@+id/artist_photo_downey_jr"
                app:layout_constraintTop_toBottomOf="@+id/cast_head_text" />

            <TextView
                android:id="@+id/artist_name_evans"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/chris_evans"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/artist_photo_evans"
                app:layout_constraintStart_toStartOf="@+id/artist_photo_evans"
                app:layout_constraintTop_toBottomOf="@+id/artist_photo_evans" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/artist_photo_ruffalo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/artist_photo_ruffalo"
                app:layout_constraintEnd_toStartOf="@+id/artist_photo_hemsworth"
                app:layout_constraintStart_toEndOf="@+id/artist_photo_evans"
                app:layout_constraintTop_toBottomOf="@+id/cast_head_text" />

            <TextView
                android:id="@+id/artist_name_ruffalo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/mark_ruffalo"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/artist_photo_ruffalo"
                app:layout_constraintStart_toStartOf="@+id/artist_photo_ruffalo"
                app:layout_constraintTop_toBottomOf="@+id/artist_photo_ruffalo" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/artist_photo_hemsworth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/artist_photo_hemsworth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/artist_photo_ruffalo"
                app:layout_constraintTop_toBottomOf="@+id/cast_head_text" />

            <TextView
                android:id="@+id/artist_name_hemsworth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/chris_hemsworth"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/artist_photo_hemsworth"
                app:layout_constraintStart_toStartOf="@+id/artist_photo_hemsworth"
                app:layout_constraintTop_toBottomOf="@+id/artist_photo_hemsworth" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>