<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="SimpleFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_movie_details_picture_background_top"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/background_picture"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/gradient_background_picture"
            app:layout_constraintBottom_toBottomOf="@+id/iv_movie_details_picture_background_top"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_details_button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="54dp"
            android:text="@string/back"
            android:textColor="#6D6D80"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_movie_details_age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="54dp"
            android:text="@string/_film_age_13"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_movie_details_picture_background_top"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_movie_details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/avengers_nend_game"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_age_limit" />

        <TextView
            android:id="@+id/tv_movie_details_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="Tagline"
            android:textColor="@color/gray"
            android:textSize="16sp"
            android:maxWidth="300dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_movie_details_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/action_adventure_fantasy"
            android:textColor="#FF3466"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_tagline" />

        <TextView
            android:id="@+id/tv_movie_details_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_8_8"
            android:textColor="@color/pink"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@+id/rb_movie_details_rating"
            app:layout_constraintBottom_toBottomOf="@+id/rb_movie_details_rating"
            app:layout_constraintStart_toStartOf="parent" />

        <RatingBar
            android:id="@+id/rb_movie_details_rating"
            style="?android:ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:numStars="5"
            android:rating="4"
            android:theme="@style/mySmallRatingBarTheme"
            app:layout_constraintStart_toEndOf="@+id/tv_movie_details_rating"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_genre" />

        <TextView
            android:id="@+id/tv_movie_details_number_of_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/_125_reviews"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/rb_movie_details_rating"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_movie_details_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="Budget: "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_number_of_reviews" />

        <TextView
            android:id="@+id/tv_movie_details_revenue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="Revenue: "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_budget" />

        <TextView
            android:id="@+id/tv_movie_details_release_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="Data: "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_revenue" />


        <TextView
            android:id="@+id/storyline_head_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_release_data" />

        <TextView
            android:id="@+id/tv_movie_details_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_head_text" />

        <TextView
            android:id="@+id/cast_head_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_details_storyline" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_movie_details_actors_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast_head_text"
            tools:listitem="@layout/view_holder_actor" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>